tutorial updates for downloading input files

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -35,7 +35,7 @@
     "* [Simulating a dwelling](#dwelling)\n",
     "  * [Simulating a sample dwelling](#sample)\n",
     "  * [Adding equipment to a dwelling](#add-equipment)\n",
-    "  * [Downloading ResStock Models](#download)\n",
+    "  * [Downloading input files](#download)\n",
     "  * [Running through the command line](#cli)\n",
     "* [Simulating a single piece of equipment](#equipment)\n",
     "  * [Electric vehicle](#ev)\n",
@@ -115,7 +115,7 @@
     "There are [multiple\n",
     "ways](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#getting-input-files)\n",
     "to generate or download OCHRE input files. An example below shows how to\n",
-    "[download building models](#download) from the ResStock dataset.\n"
+    "[download input files](#download).\n"
    ]
   },
   {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,30 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mochre\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CreateFigures\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Plot results\u001b[39;00m\n\u001b[0;32m      6\u001b[0m fig \u001b[38;5;241m=\u001b[39m CreateFigures\u001b[38;5;241m.\u001b[39mplot_power_stack(df)\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\ochre\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m __version__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.9.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSimulator\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Simulator\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mEquipment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mModels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Envelope\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\ochre\\Simulator.py:9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mhashlib\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mochre\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mochre\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_csv, OCHREException\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mochre\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschedule\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mutils_schedule\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSimulator\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\ochre\\utils\\__init__.py:7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# import .envelope import x\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mequipment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m update_equipment_properties\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menvelope\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ZONES\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhpxml\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_hpxml\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschedule\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_schedule\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\ochre\\utils\\envelope.py:4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpvlib\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mochre\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OCHREException, load_csv, convert\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# List of utility functions for OCHRE Envelope\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\pvlib\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpvlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mversion\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpvlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m# list spectrum first so it's available for atmosphere & pvsystem (GH 1628)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     spectrum,\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m     atmosphere,\n\u001b[0;32m      8\u001b[0m     bifacial,\n\u001b[0;32m      9\u001b[0m     clearsky,\n\u001b[0;32m     10\u001b[0m     iam,\n\u001b[0;32m     11\u001b[0m     inverter,\n\u001b[0;32m     12\u001b[0m     iotools,\n\u001b[0;32m     13\u001b[0m     irradiance,\n\u001b[0;32m     14\u001b[0m     ivtools,\n\u001b[0;32m     15\u001b[0m     location,\n\u001b[0;32m     16\u001b[0m     modelchain,\n\u001b[0;32m     17\u001b[0m     pvarray,\n\u001b[0;32m     18\u001b[0m     pvsystem,\n\u001b[0;32m     19\u001b[0m     scaling,\n\u001b[0;32m     20\u001b[0m     shading,\n\u001b[0;32m     21\u001b[0m     singlediode,\n\u001b[0;32m     22\u001b[0m     snow,\n\u001b[0;32m     23\u001b[0m     soiling,\n\u001b[0;32m     24\u001b[0m     solarposition,\n\u001b[0;32m     25\u001b[0m     spa,\n\u001b[0;32m     26\u001b[0m     temperature,\n\u001b[0;32m     27\u001b[0m     tools,\n\u001b[0;32m     28\u001b[0m     tracking,\n\u001b[0;32m     29\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\pvlib\\spectrum\\__init__.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpvlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrum\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrl2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m spectrl2  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpvlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrum\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmismatch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     calc_spectral_mismatch_field,\n\u001b[0;32m      4\u001b[0m     get_am15g,\n\u001b[0;32m      5\u001b[0m     get_example_spectral_response,\n\u001b[0;32m      6\u001b[0m     spectral_factor_caballero,\n\u001b[0;32m      7\u001b[0m     spectral_factor_firstsolar,\n\u001b[0;32m      8\u001b[0m     spectral_factor_sapm,\n\u001b[0;32m      9\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\pvlib\\spectrum\\mismatch.py:9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interp1d\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mintegrate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m trapezoid\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m warn\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\scipy\\integrate\\__init__.py:97\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_odepack_py\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_quadpack_py\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m---> 97\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_ode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_bvp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m solve_bvp\n\u001b[0;32m     99\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_ivp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (solve_ivp, OdeSolution, DenseOutput,\n\u001b[0;32m    100\u001b[0m                    OdeSolver, RK23, RK45, DOP853, Radau, BDF, LSODA)\n",
-      "File \u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\.venv\\lib\\site-packages\\scipy\\integrate\\_ode.py:88\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[0;32m     86\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m asarray, array, zeros, isscalar, real, imag, vstack\n\u001b[1;32m---> 88\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _vode\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _dop\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _lsoda\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -378,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"download\"></a>Downloading ResStock Models\n",
+    "### <a name=\"download\"></a>Downloading input files\n",
     "\n",
     "The above examples use sample files that are included in the OCHRE package. A\n",
     "simple way to use other input files is to download them from ResStock\n",
@@ -386,8 +365,7 @@
     "\n",
     "The following code will download ResStock files (the same ones as the sample\n",
     "files) to your current working directory. On Google Colab, these files can be\n",
-    "viewed by clicking on the folder icon on the left-hand side. You can also\n",
-    "upload your own files to Colab.\n"
+    "viewed by clicking on the folder icon on the left-hand side.\n"
    ]
   },
   {
@@ -396,7 +374,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Analysis.download_resstock_model(\"bldg0112631\", \"up11\")"
+    "this_path = os.getcwd()\n",
+    "Analysis.download_resstock_model(\"bldg0112631\", \"up11\", this_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The simplest way to get weather files is through the [EnergyPlus\n",
+    "website](https://energyplus.net/weather). You can also upload your own files\n",
+    "to Colab. The following code will download an EnergyPlus weather file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_file = \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"\n",
+    "\n",
+    "# Note: this may not work on all systems\n",
+    "!wget https://energyplus-weather.s3.amazonaws.com/north_and_central_america_wmo_region_4/USA/CO/USA_CO_Denver.Intl.AP.725650_TMY3/USA_CO_Denver.Intl.AP.725650_TMY3.epw\n",
+    "\n",
+    "# alternate to copy weather file from OCHRE sample files\n",
+    "# import shutil\n",
+    "# shutil.copy(os.path.join(default_input_path, \"Weather\", weather_file), this_path)\n"
    ]
   },
   {
@@ -421,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%ochre --help"
+    "!ochre --help"
    ]
   },
   {
@@ -430,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%ochre single --help"
+    "!ochre single --help"
    ]
   },
   {
@@ -448,14 +452,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%ochre single --duration=3"
+    "!ochre single $this_path --duration=3 --weather_file_or_path=$weather_file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Output files can be viewed directly, or loaded using the following code."
+    "Output files can be viewed directly (in Google Colab, see the folder icon on\n",
+    "the left-hand side), or loaded using the following code."
    ]
   },
   {
@@ -465,9 +470,7 @@
    "outputs": [],
    "source": [
     "# Load results from previous run\n",
-    "sim_folder = os.getcwd()\n",
-    "sim_name = \"ochre\"\n",
-    "df, metrics, hourly = Analysis.load_ochre(sim_folder, sim_name)\n",
+    "df, metrics, hourly = Analysis.load_ochre(this_path, \"ochre\")\n",
     "\n",
     "fig = CreateFigures.plot_power_stack(df)\n"
    ]
@@ -518,6 +521,7 @@
     "    \"duration\": dt.timedelta(days=10),\n",
     "    \"save_results\": False,  # if True, must specify output_path\n",
     "    # \"output_path\": os.getcwd(),\n",
+    "    \"seed\": 1,  # setting random seed to create consistent charging events\n",
     "\n",
     "    # Equipment-specific parameters\n",
     "    \"vehicle_type\": \"BEV\",\n",
@@ -774,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +961,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CreateFigures.plot_daily_profile(df, \"EV Electric Power (kW)\", plot_max=False, plot_min=False)\n"
+    "fig = CreateFigures.plot_daily_profile(df, \"EV Electric Power (kW)\", plot_max=False, plot_min=False)\n"
    ]
   },
   {
