minor fixes in tutorial

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -253,7 +253,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from ochre import Analysis\n",
     "\n",
     "# calculate metrics from the time series results\n",
@@ -326,8 +325,8 @@
     "new_equipment = {\n",
     "    \"EV\": {\n",
     "        \"vehicle_type\": \"BEV\",\n",
-    "        \"charging_level\": \"Level 2\",\n",
-    "        \"range\": 250,\n",
+    "        \"charging_level\": \"Level 1\",\n",
+    "        \"range\": 200,\n",
     "    },\n",
     "    \"PV\": {\n",
     "        \"capacity\": 5,\n",
@@ -348,9 +347,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df, metrics, hourly = dwelling.simulate()\n",
+    "df, metrics, hourly = dwelling_with_new_equipment.simulate()\n",
     "\n",
-    "fig = CreateFigures.plot_power_stack(df)\n"
+    "fig = CreateFigures.plot_power_stack(df)"
    ]
   },
   {
