adding tutorial links to docs

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -359,8 +359,10 @@
     "### <a name=\"download\"></a>Downloading input files\n",
     "\n",
     "The above examples use sample files that are included in the OCHRE package. A\n",
-    "simple way to use other input files is to download them from ResStock\n",
-    "Datasets. ResStock metadata can be used to choose which model to download.\n",
+    "simple way to use other input files is to\n",
+    "[download](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#getting-input-files)\n",
+    "them from ResStock Datasets. ResStock metadata can be used to choose which\n",
+    "model to download.\n",
     "\n",
     "The following code will download ResStock files (the same ones as the sample\n",
     "files) to your current working directory. On Google Colab, these files can be\n",
@@ -848,8 +850,9 @@
     "\n",
     "This control will reduce the heating setpoint by 1C from 5-9PM each day. It\n",
     "adjusts the setpoint schedule before beginning the simulation; however, this\n",
-    "control can be achieved by setting the setpoint at every time step as well. We\n",
-    "use the same house model as the first example."
+    "control can be achieved by [setting the\n",
+    "setpoint](https://ochre-nrel.readthedocs.io/en/latest/ControllerIntegration.html#hvac-heating-or-hvac-cooling)\n",
+    "at every time step as well. We use the same house model as the first example."
    ]
   },
   {
@@ -914,7 +917,10 @@
     "\n",
     "This control implements \"perfect\" managed charging for an EV. At each time\n",
     "step, it calculates the average power required to achieve 100% SOC by the end\n",
-    "of the parking session, and sets the charging power to that value."
+    "of the parking session, and sets the charging power to that value. Other [EV\n",
+    "control\n",
+    "options](https://ochre-nrel.readthedocs.io/en/latest/ControllerIntegration.html#electric-vehicle-ev)\n",
+    "are described in the documentation."
    ]
   },
   {
@@ -981,7 +987,9 @@
     "This control implements the CTA-2045 Load Add and Load Shed control for a heat\n",
     "pump water heater. The control will adjust the setpoint and deadband of the\n",
     "water heater thermostat to increase load for 1 hour (at 7AM and 4PM) and then\n",
-    "reduce load for 1 hour (at 8AM and 5PM)."
+    "reduce load for 1 hour (at 8AM and 5PM). Other [water heater control\n",
+    "options](https://ochre-nrel.readthedocs.io/en/latest/ControllerIntegration.html#water-heating)\n",
+    "are described in the documentation."
    ]
   },
   {
