removing some sample weather files

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -171,7 +171,7 @@
     "    # Input files\n",
     "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
     "    \"hpxml_schedule_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"),\n",
-    "    \"weather_file\": os.path.join(default_input_path, \"Weather\", \"G0800310.epw\"),\n",
+    "    \"weather_file\": os.path.join(default_input_path, \"Weather\", \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"),\n",
     "}\n",
     "\n",
     "# Create Dwelling model\n",
@@ -787,9 +787,8 @@
     "\n",
     "from ochre import Analysis\n",
     "\n",
-    "# Note: see documentation for where to download other weather files\n",
-    "# https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#weather-file\n",
-    "default_weather_file = os.path.join(default_input_path, \"Weather\", \"G0800310.epw\")\n",
+    "default_weather_file_name = \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"\n",
+    "default_weather_file = os.path.join(default_input_path, \"Weather\", default_weather_file_name)\n",
     "\n",
     "main_path = os.getcwd()\n",
     "\n",
@@ -803,7 +802,7 @@
     "        os.makedirs(input_path, exist_ok=True)\n",
     "        Analysis.download_resstock_model(building, upgrade, input_path, overwrite=False)\n",
     "        shutil.copy(default_weather_file, input_path)\n",
-    "        input_paths.append(input_path)\n"
+    "        input_paths.append(input_path)"
    ]
   },
   {
@@ -816,8 +815,10 @@
     "\n",
     "# Run Dwelling models sequentially\n",
     "for input_path in input_paths:\n",
-    "    dwelling = create_dwelling(input_path, duration=7)\n",
-    "    dwelling.simulate()\n"
+    "    dwelling = create_dwelling(\n",
+    "        input_path, duration=7, weather_file_or_path=default_weather_file_name\n",
+    "    )\n",
+    "    dwelling.simulate()"
    ]
   },
   {
