updated tutorial to use latest release

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -72,10 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install ochre-nrel\n",
-    "# installing from a development branch for v0.9\n",
-    "%pip uninstall -y ochre-nrel\n",
-    "%pip install git+https://github.com/NREL/OCHRE@docs-and-tutorial"
+    "%pip install ochre-nrel"
    ]
   },
   {
