--- a/bin/run_wh_analysis_janelle.ipynb
+++ b/bin/run_wh_analysis_janelle.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,28 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "464618 464618 464618\n",
-      "464610 464610 464610 464610 464610\n"
+      "422380 422380 422380\n",
+      "422372 422372 422372 422372 422372\n"
      ]
     }
    ],
    "source": [
     "#data = pd.read_csv(\"output_site_10292.csv\")  90023\n",
     "#data = pd.read_csv(\"output_site_90023_constant_setpoint.csv\")\n",
-    "data = pd.read_csv(\"output_site_90159.csv\")\n",
+    "data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
     "#X, y = csv_to_features(data)\n",
     "\n",
     "#data1 = pd.read_csv(\"output_site_null.csv\")\n",
     "#X1, y1 = csv_to_features(data1)\n",
     "\n",
-    "X, y = csv_to_features(data, 1)\n",
+    "X, y = csv_to_features(data, 2)\n",
     "\n",
     "\n"
    ]
@@ -116,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training coefficient of determination: 0.6946501320122429\n",
-      "Test coefficient of determination: 0.6919119947666587\n",
-      "Mean Squared Error: 9.236844436826315\n"
+      "Training coefficient of determination: 0.9690792341192671\n",
+      "Test coefficient of determination: 0.969779178955176\n",
+      "Mean Squared Error: 0.27222924872399645\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,19 +166,19 @@
      "output_type": "stream",
      "text": [
       "Input: \n",
-      "[  0.           0.           0.           0.         143.84558\n",
-      " 162.77263      7.57082     11.35623      0.38848165   0.40914385\n",
-      "   0.42824494   0.44551689   0.4604809    4.501        4.501\n",
-      "   4.501       40.59934656  13.90810285]\n",
+      "[  0.         143.84558    162.77263      7.57082     11.35623\n",
+      "  18.92705      0.           3.78541      4.2          0.6\n",
+      "   4.5          4.5          4.5          4.5          4.5\n",
+      "   4.5         47.33372849  47.33372849]\n",
       "Hot Water Outlet: \n",
-      "1994    46.437948\n",
-      "1995    46.319279\n",
-      "1996    46.201771\n",
-      "1997    46.085398\n",
-      "1998    45.970133\n",
-      "1999    12.285696\n",
-      "2000    25.972291\n",
-      "2001    35.075715\n",
+      "1997    47.333728\n",
+      "1998    49.084956\n",
+      "1999    23.436775\n",
+      "2000    32.458004\n",
+      "2001    38.638556\n",
+      "2002    47.218404\n",
+      "2003    49.555291\n",
+      "2004    49.398405\n",
       "Name: Hot Water Outlet Temperature (C), dtype: float64\n",
       "Predicted Hot Water Outlet Temperature: \n"
      ]
@@ -186,11 +186,11 @@
     {
      "data": {
       "text/plain": [
-       "array([41.79208132, 41.76869998, 41.35671028, 41.11220175, 40.23040709,\n",
-       "       38.15096331, 41.30665263, 43.51837794])"
+       "array([47.33372849, 47.36316057, 41.46655592, 37.5493513 , 36.81791071,\n",
+       "       37.53924531, 38.23209846, 38.55835634])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -255,10 +255,10 @@
    "source": [
     "#validation test\n",
     "#val_data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
-    "#val_data = pd.read_csv(\"output_site_90159.csv\")\n",
-    "val_data = pd.read_csv(\"output_site_90023_constant_setpoint.csv\")\n",
+    "val_data = pd.read_csv(\"output_site_90159_ewh.csv\")\n",
+    "#val_data = pd.read_csv(\"output_site_90023_constant_setpoint.csv\")\n",
     "#val_data = pd.read_csv(\"output_site_null.csv\")\n",
-    "X_val, y_val = csv_to_features(val_data, 1)"
+    "X_val, y_val = csv_to_features(val_data, 2)"
    ]
   },
   {
@@ -270,15 +270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test coefficient of determination: 0.6220164459372184\n",
-      "Mean Squared Error: 4.637931644859467\n"
+      "test coefficient of determination: 0.4544542985806776\n",
+      "Mean Squared Error: 14.615063793452657\n"
      ]
     }
    ],
@@ -540,13 +540,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60b03ab4251e42a4977d8d6a3b6bf078",
+       "model_id": "88a6f16d9e464c8cad2bc014de4563cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,9 +563,18 @@
        "<function __main__.plot_day(day, i)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1200x500 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -631,7 +640,7 @@
     "\n",
     "# Slider widgets\n",
     "day_slider = widgets.IntSlider(value=25, min=0, max=len(X_val)//intervals - 1, step=1, description=\"Day:\")\n",
-    "i_slider = widgets.IntSlider(value=0, min=0, max=8, step=1, description=\"i-step:\")\n",
+    "i_slider = widgets.IntSlider(value=0, min=0, max=7, step=1, description=\"i-step:\")\n",
     "\n",
     "# Display\n",
     "widgets.interact(plot_day, day=day_slider, i=i_slider)"
