Added Electric Power Usage Feature

--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -17,6 +17,19 @@
     "\n",
     "new_temp = temp + dt/m * (u/(rho * cp * V) * (t_a - temp) + (power/(rho*cp * V)) )\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9883f688",
+   "metadata": {},
+   "source": [
+    "Experiments\n",
+    "1) Perfect foresight of future hourly average water use patterns (accurate in daily shape but not granular)\n",
+    "    36, 54, and 72 gal/day draw profiles\n",
+    "    Simulation based test 28.8 to 72 gal/day\n",
+    "\n",
+    "2) CasADi python optimization package, IPOPT solver"
+   ]
   }
  ],
  "metadata": {
