--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -423,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ochre_dev",
+   "display_name": "ochreEnv",
    "language": "python",
    "name": "python3"
   },
@@ -437,14 +437,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "38511c319a6abad618a0f5b1e1754d185267d9d16f724d65987013cf31e529bb"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
